tests/negative/meta_size_float.disturb
n = (number){1};
n.size = 1.5;
